tests/ui/issues/issue-22886.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-22886.rs:13:6
   |
LL | impl<'a> Iterator for Newtype {
   |      ^^ unconstrained lifetime parameter
   |
   = note: to constrain `'a`, use it in the implemented trait, in the self type, or in an equality with an associated type

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
